--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -12,8 +12,20 @@
 </head>
 <body class="bg-black"></body>
     <div>
-        <h1 id="title" class="heading">DOM learning</h1>
+        <h1 id="title" class="heading">DOM learning <span style ="display: none"; >text test</span> </h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
 </body>
 </html>
