--- a/dom apna college/index.html
+++ b/dom apna college/index.html
@@ -14,7 +14,7 @@
     <div id="firstDiv" class="allDivs">First Div</div>
     <script>
     </script>
-    <div class="allDivs">Second Div</div>
+    <div class="allDivs">Second Div</div>~
    <table>
     <tr>
         <td>One</td>
