--- a/08_events/one.html
+++ b/08_events/one.html
@@ -8,7 +8,7 @@
 <body style="background-color: #414144; color: aliceblue;">
     <h2>Amazing image</h2>
     <div>
-        <ul class="images">
+        <ul id="images">
             <li><img width="200px" id="photoshop" src="https://images.pexels.com/photos/56759/pexels-photo-56759.jpeg?auto=compress&cs=tinysrgb&w=400" alt=""></li>
             <li><img width="200px" id="japan" src="https://images.pexels.com/photos/402028/pexels-photo-402028.jpeg?auto=compress&cs=tinysrgb&w=400" alt=""></li>
             <li><img width="200px" id="river" src="https://images.pexels.com/photos/1179225/pexels-photo-1179225.jpeg?auto=compress&cs=tinysrgb&w=400" alt=""></li>
@@ -19,20 +19,41 @@
     </div>
 </body>
 <script>
-    // document.getElementById('owl').onclick = function() {
-    //     alert(`owl clicked`)
+    // document.getElementById('owl').onclick = function(){
+    //     alert("owl clicked")
     // }
 
-    // attachEvent()
-    // jQuery - on
+        // attachEvent()
+        //jQery - on
 
-    // type, timestamp, defaultPrevented
-    //taget, toElement, srcElement, currentTarget
+        // types, timestamp, defaultPrevented
+    //target, toElement, srcElement, currentTarget,
     //clientX, clientY, screenX, screenY
     //altkey, ctrlkey, shiftkey, keyCode
 
-    document.getElementById('owl').addEventListener('click', function(e){
-        console.log(e);
-    }, false)
+    // document.getElementById('images').addEventListener('click', function(e){
+    //     console.log('clicked inside the ul');
+    // }, false)
+
+    // document.getElementById('owl').addEventListener('click', function(e){
+    //    console.log('clicked owl again');
+    //    e.stopPropagation()
+    // }, false)
+
+    // document.getElementById('google').addEventListener('click', function(e){
+    //     console.log("google clicked");
+    //     e.preventDefault();
+    // }, false)
+
+        document.querySelector('#images').addEventListener('click',function(e){
+           if(e.target.tagName.toLowerCase() === 'img'){
+            console.log(e.target.parentNode);
+            // let removeIt = e.target.parentNode.remove()
+            let removeIt = e.target.parentNode
+
+            removeIt.parentNode.removeChild(removeIt)
+
+           }
+        }, false)
 </script>
 </html>
